<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="10sp">

    <LinearLayout
        android:background="#DE8B61"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:background="#FFBF9F"
            android:layout_margin="10sp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_marginTop="5sp"
                android:layout_marginLeft="5sp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:layout_marginStart="5sp" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:background="#FFBF9F"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10sp">

            <TextView

                android:layout_marginTop="5sp"
                android:layout_marginLeft="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bestScore"
                android:textSize="20sp"
                android:layout_marginStart="5sp" />

            <TextView
                android:id="@+id/tv_best_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="#DE8B61"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/menu_button"
            android:layout_marginLeft="5sp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/menu"
            android:layout_marginStart="5sp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/back_button"
            android:layout_marginRight="5sp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginEnd="5sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


    <com.cbzgame.mygame2048.MyGirdGame
        android:id="@+id/myGirdGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.cbzgame.mygame2048.MyGirdGame>

</LinearLayout>